update settings tidal ng, change folder path of music, add abbr git

--- a/packages/tidal/dot/settings.json
+++ b/packages/tidal/dot/settings.json
@@ -1,30 +1,45 @@
 {
-  "skip_existing": true,
-  "lyrics_embed": false,
-  "lyrics_file": false,
-  "video_download": true,
-  "download_delay": true,
-  "download_base_path": "/data/kael/Music/Lossless",
-  "quality_audio": "LOSSLESS",
-  "quality_video": "480",
-  "format_album": "{artist_name} - {track_title}",
-  "format_playlist": "{artist_name} - {track_title}",
-  "format_mix": "{artist_name} - {track_title}",
-  "format_track": "{artist_name} - {track_title}",
-  "format_video": "{artist_name} - {track_title}",
-  "video_convert_mp4": true,
-  "path_binary_ffmpeg": "",
-  "metadata_cover_dimension": "320",
-  "metadata_cover_embed": true,
-  "cover_album_file": true,
-  "extract_flac": true,
-  "downloads_simultaneous_per_track_max": 20,
-  "download_delay_sec_min": 3.0,
-  "download_delay_sec_max": 5.0,
-  "album_track_num_pad_min": 1,
-  "downloads_concurrent_max": 3,
-  "symlink_to_track": false,
-  "playlist_create": false,
-  "metadata_replay_gain": true,
-  "metadata_write_url": true
+    "skip_existing": true,
+    "lyrics_embed": false,
+    "lyrics_file": false,
+    "use_primary_album_artist": false,
+    "video_download": true,
+    "download_delay": true,
+    "download_base_path": "/data/kael/Music/Lossless",
+    "quality_audio": "LOSSLESS",
+    "quality_video": "480",
+    "download_dolby_atmos": false,
+    "format_album": "{artist_name} - {track_title}",
+    "format_playlist": "{artist_name} - {track_title}",
+    "format_mix": "{artist_name} - {track_title}",
+    "format_track": "{artist_name} - {track_title}",
+    "format_video": "{artist_name} - {track_title}",
+    "video_convert_mp4": true,
+    "path_binary_ffmpeg": "",
+    "metadata_cover_dimension": "320",
+    "metadata_cover_embed": true,
+    "mark_explicit": false,
+    "cover_album_file": true,
+    "extract_flac": true,
+    "downloads_simultaneous_per_track_max": 20,
+    "download_delay_sec_min": 3.0,
+    "download_delay_sec_max": 5.0,
+    "album_track_num_pad_min": 1,
+    "downloads_concurrent_max": 3,
+    "symlink_to_track": false,
+    "playlist_create": false,
+    "metadata_replay_gain": true,
+    "metadata_write_url": true,
+    "window_x": 50,
+    "window_y": 50,
+    "window_w": 1200,
+    "window_h": 800,
+    "metadata_delimiter_artist": ", ",
+    "metadata_delimiter_album_artist": ", ",
+    "filename_delimiter_artist": ", ",
+    "filename_delimiter_album_artist": ", ",
+    "metadata_target_upc": "UPC",
+    "api_rate_limit_batch_size": 20,
+    "api_rate_limit_delay_sec": 3.0,
+    "initial_key_format": "alphanumeric"
 }
